    bbkeys still use the new method, will set focus as you cycle through the
    stack, but won't actually raise the window you want until you tell it
    to by releasing your keys or hitting <Enter>, and won't show the popup
    window list and cycle through the entries as you go.  Again, harder to
    explain than it is to use....

version 0.8.0 --
  - BIG changes!!!  w00T!!!  There's some very significant improvements in
    this version, and as such, I'm calling this version 0.8.0 for various
    reasons....
      1) I feel like it
      2) I'm thinking we're about "there", and 0.8.0 sounds like more of a
      non-beta product than 0.3.8
      3) I feel like it   =:)

  - xOr (see below) has done some majorly good coding with bbkeys.  He's
    implemented a different window-cycling scheme that's more
    "Windows"-like (think <alt+tab> popup window with list of things you're
    cycling through)...  Verrrry slick.  Umm. Did I say Verrrrry?  
    
    Why, yes I did.  You are just going to have to see it to believe it.  Blackbox
    has just again become my favorite window manager for X, with the help
    xOr has given to me.  The window cycling methodology has changed, and
    believe me, this is a change for the better.  There's now two methods
    of window cycling--both use the same keybindings, so don't get yer
    panties tied in knots.  xOr has implemented a newer, better "old-style"
    window cycling, called linear cycling.  It's basically what
    blackbox/bbkeys has done up until this point, but with a few
    significant improvements.  But the really exciting new feature in this
    release of bbkeys is the other way--a "stacked" cycling method.  It
    makes much more sense than the old way.  And it's purtier, because you
    can see what you're window-changing to before you actually go there.
    And when you hit <alt+tab> (example keybinding--you can have it be
    whatever you want it to be), it goes back to the window you were on