@@ -1,0 +1,4 @@
+# doc/Makefile.am for bbkeys
+
+man_MANS = bbkeys.1 bbkeys.bb.5 bbkeysrc.5
+
