@@ -1,0 +1,98 @@
+.TH BBKEYS 1 "August 04, 2001" "bbtools" bbkeys
+.SH NAME
+bbkeys \- a general XWindow keygrabber
+
+.SH SYNOPSIS
+.B bbkeys
+[\fIOPTION\fR]
+
+.SH DESCRIPTION
+\fBbbkeys\fR is the keygrabber for the blackbox window manager. \fBbbkeys\fR
+handles all keybindings and keyboard shortcuts for  blackbox. It uses
+blackbox's Image classes for rendering its look and feel so that \fBbbkeys\fR
+will render itself to match whatever blackbox style is used. It is highly
+configurable either via the included \fIbbkeysconf\fR GUI utility or by
+hand-editting bbkeys's config file.
+
+.SH USAGE
+On startup, \fBbbkeys\fR reads \fI$HOME/.bbkeysrc\fR, which you can edit by
+hand or through \fIbbkeysconf\fR.
+
+.SH OPTIONS
+A summary of the options supported by \fBbbkeys\fR is included below.
+
+.TP
+\fB\-c[onfig]\fR \fIfilename\fR
+use alternate config file
+.TP
+\fB\-d[ecorated]\fR
+Show 'normal' decorated window
+.TP
+\fB\-display\fR \fIdisplay name\fR
+X server to connect to
+.TP
+\fB\-geom[etry]\fR \fIgeometry\fR
+Set geometry of window
+.TP
+\fB\-h[elp]\fR
+Show summary of options and exit.
+.TP
+\fB\-i[conic]\fR
+start bbkeys in a minimized state (will override -withdrawn directive)
+.TP
+\fB\-m[iniMe]\fR
+like Austin Powers 2. bbkeys, but smaller
+.TP
+\fB\-n[obb]\fR
+Fall back on default configuration
+.TP
+\fB\-no[qt]\fR
+use non-qt configuration tool
+.TP
+\fB\-s[hape]\fR
+Don't display groundplate
+.TP
+\fB\-t[inyMe]\fR
+all you can see is his keyhole
+.TP
+\fB\-v[ersion]\fR
+Display version number
+.TP
+\fB\-w[ithdrawn]\fR
+Place bbtool in the Slit
+
+.SH FILES
+.nr
+Default: \fI$datadir=/usr/local/share/\fR
+.br
+\fI$HOME/.bbkeysrc\fR maintains keybindings
+.br
+See \fIbbkeysrc(5)\fR
+.SS "Under Blackbox"
+.nf
+\fI$datadir/bbtools/bbkeys.bb\fR the global configuration file
+\fI$HOME/.bbtools/bbkeys.bb\fR a local configuration file
+
+.SS "Under other Window managers"
+.nf
+\fI$datadir/bbtools/bbkeys.nobb\fR the global configuration file
+\fI$HOME/.bbtools/bbkeys.nobb\fR a local configuration file
+
+.SH VERSION
+0.8.1
+
+.SH BUGS
+This application is perfect and should solve all of your problems,  up to and
+including male pattern baldness and world hunger. Should you, against all
+odds, find any bugs, please report them to the author.
+
+
+.SH "SEE ALSO"
+.BR bbkeysrc(5),
+.BR bbkeys.bb(5)
+
+.SH AUTHOR
+.nr
+Jason Kasper (vanRijn) <vR@movingparts.net> - bbkeys
+.br
+Jan Schaumann <jschauma@netmeister.org> - this man page
