@@ -1,0 +1,48 @@
+.TH BBKEYS.BB 5 "August 05, 2001" bbtools bbkeys.bb
+.SH NAME
+bbkeys.bb \- bbkeys configuration file
+
+.SH SYNOPSIS
+.B $HOME/.bbtools/bbkeys.bb
+
+.SH DESCRIPTION
+By default \fBbbkeys\fR reads the Blackbox style-file as defined in
+\fI$HOME/.blackboxrc\fR and copies as much of the style as possible. The
+result is a application which looks a lot like the toolbar.
+
+.SS "Reconfigure bbkeys"
+
+If the resource : \fIbbkeys.autoConfig:\fR is set to \fItrue\fR the tool will
+periodically check if the main config files, \fI$HOME/.blackboxrc\fR for
+Blackbox users and \fIbbkeys.nobb\fR for other WM's to see if they have
+changed. If so \fBbbkeys\fR will reconfigure.
+
+.SS "Copying the look of the Blackbox toolbar"
+\fBbbkeys\fR automatically copies the style of the blackbox toolbar. It copies:
+
+.nr
+bevelWidth -> bbkeys.bevelWidth
+.br
+window -> bbkeys.frame
+.br
+window.label -> bbkeys.label
+.br
+window.color -> bbkeys.frame.color
+.br
+window.colorTo -> bbkeys.frame.colorTo
+.br
+window.label.color -> bbkeys.label.color
+.br
+window.label.colorTo -> bbkeys.label.colorTo
+.br
+window.textColor -> bbkeys..textColor
+
+.SH "SEE ALSO"
+.BR bbkeys(1),
+.BR bbkeysrc(5)
+
+.SH AUTHOR
+.nr
+Jason Kasper (vanRijn) <vR@movingparts.net> - bbkeys
+.br
+Jan Schaumann <jschauma@netmeister.org> - this man page
